# bbbs/urls.py
@@ -20,10 +20,10 @@ from drf_yasg.views import get_schema_view
 from rest_framework_simplejwt import views as jwt_views
 
 from bbbs.afisha.views import EventList, EventParticipantList
-from bbbs.questions.views import QuestiosList
+from bbbs.questions.views import QuestionsList, QuestionView
 from bbbs.common.views import CityList, ProfileView
 from bbbs.main.views import MainView
-from bbbs.places.views import PlaceList
+from bbbs.places.views import PlaceList, PlaceView
 from bbbs.rights.views import RightList
 
 schema_view = get_schema_view(
@@ -49,12 +49,14 @@ urlpatterns = [
     path('api/v1/token/', jwt_views.TokenObtainPairView.as_view(), name='token_obtain_pair'),
     path('api/v1/token/refresh/', jwt_views.TokenRefreshView.as_view(), name='token_refresh'),
 
-    path('api/v1/questions/', QuestiosList.as_view()),
+    path('api/v1/questions/', QuestionsList.as_view()),
+    path('api/v1/question/', QuestionView.as_view()),
     path('api/v1/cities/', CityList.as_view()),
     path('api/v1/profile/', ProfileView.as_view()),
     path('api/v1/main/', MainView.as_view()),
     path('api/v1/afisha/events/', EventList.as_view()),
     path('api/v1/afisha/event-participants/', EventParticipantList.as_view()),
     path('api/v1/places/', PlaceList.as_view()),
+    path('api/v1/place/', PlaceView.as_view()),
     path('api/v1/rights/', RightList.as_view()),
 ]
